--- a/pom.xml
+++ b/pom.xml
@@ -253,6 +253,25 @@
             <artifactId>metrics-core</artifactId>
         </dependency>
         <!-- jhipster-needle-maven-add-dependency -->
+        <dependency>
+				<groupId>io.swagger</groupId>
+				<artifactId>swagger-annotations</artifactId>
+				<version>1.6.4</version>
+			</dependency>
+			<dependency>
+				<groupId>io.springfox</groupId>
+				<artifactId>springfox-core</artifactId>
+				<version>3.0.0</version>
+			</dependency>
+			
+		<dependency>
+            <groupId>com.oracle.database.jdbc</groupId>
+            <artifactId>ojdbc8</artifactId>
+        </dependency>
+        <dependency>
+            <groupId>org.springframework.boot</groupId>
+            <artifactId>spring-boot-starter-data-jpa</artifactId>
+        </dependency>
     </dependencies>
 
     <build>
@@ -323,6 +342,7 @@
                 <artifactId>openapi-generator-maven-plugin</artifactId>
             </plugin>
             <!-- jhipster-needle-maven-add-plugin -->
+            
         </plugins>
         <pluginManagement>
             <plugins>
@@ -678,6 +698,7 @@
                                 <generatorName>spring</generatorName>
                                 <apiPackage>mx.conacyt.componentes.informacion.web.api</apiPackage>
                                 <modelPackage>mx.conacyt.componentes.informacion.service.api.dto</modelPackage>
+                                <modelNameSuffix>Dto</modelNameSuffix>
                                 <supportingFilesToGenerate>ApiUtil.java</supportingFilesToGenerate>
                                 <importMappings>Problem=org.zalando.problem.Problem</importMappings>
                                 <skipValidateSpec>false</skipValidateSpec>
@@ -880,19 +901,19 @@
                                                 <ignore/>
                                             </action>
                                         </pluginExecution>
-                                        <pluginExecution>
-                                            <pluginExecutionFilter>
-                                                <groupId>org.openapitools</groupId>
-                                                <artifactId>openapi-generator-maven-plugin</artifactId>
-                                                <versionRange>${openapi-generator-maven-plugin.version}</versionRange>
-                                                <goals>
-                                                    <goal>generate</goal>
-                                                </goals>
-                                            </pluginExecutionFilter>
-                                            <action>
-                                                <ignore />
-                                            </action>
-                                        </pluginExecution>
+<!--                                         <pluginExecution> -->
+<!--                                             <pluginExecutionFilter> -->
+<!--                                                 <groupId>org.openapitools</groupId> -->
+<!--                                                 <artifactId>openapi-generator-maven-plugin</artifactId> -->
+<!--                                                 <versionRange>${openapi-generator-maven-plugin.version}</versionRange> -->
+<!--                                                 <goals> -->
+<!--                                                     <goal>generate</goal> -->
+<!--                                                 </goals> -->
+<!--                                             </pluginExecutionFilter> -->
+<!--                                             <action> -->
+<!--                                                 <ignore /> -->
+<!--                                             </action> -->
+<!--                                         </pluginExecution> -->
                                     </pluginExecutions>
                                 </lifecycleMappingMetadata>
                             </configuration>
