--- a/src/main/resources/config/application-dev.yml
+++ b/src/main/resources/config/application-dev.yml
@@ -19,13 +19,14 @@ logging:
     tech.jhipster: DEBUG
     org.hibernate.SQL: DEBUG
     mx.conacyt.componentes.informacion: DEBUG
+    javax.management: WARN
 
 eureka:
   instance:
     prefer-ip-address: true
   client:
     service-url:
-      defaultZone: http://admin:${jhipster.registry.password}@localhost:8761/eureka/
+      defaultZone: ttp://admin:${jhipster.registry.password}@localhost:8761/eureka/
 
 spring:
   devtools:
@@ -39,12 +40,21 @@ spring:
       indent-output: true
   cloud:
     config:
-      uri: http://admin:${jhipster.registry.password}@localhost:8761/config
+      uri:
       # name of the config server's property source (file.yml) that we want to use
       name: informacionMs
       profile: dev
       label: main # toggle to switch to a different version of the configuration as stored in git
       # it can be set to any label, branch or commit of the configuration source Git repository
+
+  datasource:
+    url:
+    username:
+    password:
+  jpa:
+    properties:
+      hibernate:
+        dialect: org.hibernate.dialect.Oracle10gDialect
   messages:
     cache-duration: PT1S # 1 second, see the ISO 8601 standard
   thymeleaf:
